mercury-rotd (20200108-2) UNRELEASED; urgency=medium

  * Modify the way grades are configured

 -- Paul Bone <paul@bone.id.au>  Mon, 20 Jan 2020 22:46:15 +1100

mercury-rotd (20200108-1) mercury-buster; urgency=medium

  * Update upstream version

 -- Paul Bone <paul@bone.id.au>  Sun, 19 Jan 2020 16:21:42 +1100

mercury-rotd (20181114-5) mercury-stretch; urgency=low

  * Fix how version number is set & compiled in

 -- Paul Bone <paul@bone.id.au>  Fri, 26 Jul 2019 23:04:00 +1100

mercury-rotd (20181114-3) mercury-stretch; urgency=low

  * Add missing texlive build dependency
  * Parallelise build

 -- Paul Bone <paul@bone.id.au>  Wed, 21 Jul 2019 16:02:00 +1100

mercury-rotd (20181114-2) mercury-stretch; urgency=low

  * Bugfix: mercury-hlctrail-dev package the correct files

 -- Paul Bone <paul@bone.id.au>  Wed, 17 Jan 2019 00:30:00 +1100

mercury-rotd (20181114-1) mercury-stretch; urgency=low

  * Update Mercury to rotd-2018-11-14

 -- Paul Bone <paul@bone.id.au>  Fri, 16 Nov 2018 23:08:52 +1100

mercury (14.01.1-3) mercury-sid; urgency=low

  * Seperate the remove-paths patch from the version patch
  * Fix package priority
  * Fix some syntax in the copyright file
  * Fix spelling in README.Debian
  * Don't build dbgsym packages
  * Properly clean .cvsignore files

 -- Paul Bone <paul@bone.id.au>  Wed, 14 Nov 2018 22:46:00 +1100

mercury (14.01.1-2) mercury-sid; urgency=low

  * Build for sid.

 -- Paul Bone <paul@bone.id.au>  Mon, 27 Mar 2017 23:28:54 +1100

mercury (14.01.1-1) mercury-jessie; urgency=low

  * Initial release.

 -- Paul Bone <paul@bone.id.au>  Sun, 12 Mar 2017 15:15:47 +1100